--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
 asgiref==3.8.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
+distlib==0.3.7
 Django==5.0.6
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+filelock==3.12.2
 idna==3.7
+pipenv==2023.9.8
+platformdirs==3.9.1
+PyJWT==2.8.0
 requests==2.32.1
 sqlparse==0.5.0
 urllib3==2.2.1
+virtualenv==20.24.2
+virtualenv-clone==0.5.7
