--- a/nginx.conf
+++ b/nginx.conf
@@ -1,45 +1,60 @@
-server {
-    listen 80;
-    server_name localhost;
+worker_processes 1;
 
-    # Serve the React app
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri /index.html;
-    }
+events {
+    worker_connections 1024;# maximum number of simultaneous connections
+}
 
-    # Serve static files
-    location /static/ {
-        alias /usr/share/nginx/html/static;
-        access_log off;
-        expires max;
-    }
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    # Serve media files
-    location /media/ {
-        alias /usr/share/nginx/html/media;
-        access_log off;
-        expires max;
-    }
+    sendfile on;
+    keepalive_timeout 65;
 
-    # Proxy API requests to Django via Daphne
-    location /api/ {
-        proxy_pass http://django:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    server {
+        listen 80;
+        server_name localhost;
 
-    # Proxy WebSocket connections to Django via Daphne
-    location /ws/ {
-        proxy_pass http://django:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        # Serve the React app
+        location / {
+            root /usr/share/nginx/html;
+            try_files $uri /index.html;
+        }
+
+        # Serve static files
+        location /static/ {
+            alias /app/static/;
+            access_log off;
+            expires max;
+        }
+
+        # Serve media files
+        location /media/ {
+            alias /app/media/;
+            access_log off;
+            expires max;
+        }
+
+        # Proxy API requests to Django via Daphne
+        location /api/ {
+            #refer to the service name defined in docker-compose.yml
+            proxy_pass http://django:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy WebSocket connections to Django via Daphne
+        location /ws/ {
+            proxy_pass http://django:8000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
