--- a/nginx.conf
+++ b/nginx.conf
@@ -15,12 +15,6 @@ http {
         listen 80;
         server_name localhost;
 
-        # Serve the React app
-        location / {
-            root /usr/share/nginx/html;
-            try_files $uri /index.html;
-        }
-
         # Serve static files
         location /static/ {
             alias /app/static/;
@@ -35,9 +29,8 @@ http {
             expires max;
         }
 
-        # Proxy API requests to Django via Daphne
+        # Proxy API requests to Django
         location /api/ {
-            #refer to the service name defined in docker-compose.yml
             proxy_pass http://django:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -45,12 +38,21 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Proxy WebSocket connections to Django via Daphne
+        # Proxy WebSocket connections to Django
         location /ws/ {
             proxy_pass http://django:8000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Proxy all other requests to Django
+        location / {
+            proxy_pass http://django:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
