--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name stonesliving.com www.stonesliving.com;
 
         # Serve static files
         location /static/ {
