--- a/Dockerfile-nginx
+++ b/Dockerfile-nginx
@@ -4,6 +4,6 @@
 
 FROM nginx:alpine
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY frontend/build /usr/share/nginx/html
+COPY --from=build-stage /app/frontend/build /usr/share/nginx/html
 COPY static /app/static
 COPY media /app/media
