--- a/Dockerfile-react
+++ b/Dockerfile-react
@@ -3,7 +3,7 @@
 # LivingStones/Dockerfile-react
 
 # Use the official Node.js image
-FROM node:14
+FROM node:14-alpine AS build-stage
 
 # Set the working directory to /app
 WORKDIR /app
