debugged docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       dockerfile: Dockerfile-django
     container_name: django
     command: daphne -b 0.0.0.0 -p 8000 livingstones.asgi:application
-    volumes:
-      - .:/app
+#    volumes:
+#      - .:/app
     ports:
       - "8000:8000"
 
