--- a/Dockerfile-django
+++ b/Dockerfile-django
@@ -6,6 +6,10 @@ FROM python:3.11.4
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
+# Install Node.js and npm
+RUN apt-get update && \
+    apt-get install -y nodejs npm
+
 # Set work directory
 WORKDIR /app
 
@@ -19,6 +23,9 @@ COPY . /app/
 
 # Change the working directory to /app/frontend
 WORKDIR /app/frontend
+
+# Install dependencies
+RUN npm install
 
 # Build the application
 RUN npm run build
