--- a/Dockerfile-nginx
+++ b/Dockerfile-nginx
@@ -3,6 +3,6 @@
 
 FROM nginx:alpine
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY static /app/static
-COPY media /app/media
+COPY --from=django /app/static /app/static
+COPY --from=django /app/media /app/media
 
