--- a/Dockerfile-django
+++ b/Dockerfile-django
@@ -32,6 +32,11 @@ RUN npm run build
 
 WORKDIR /app
 
+# db Migrations
+RUN python manage.py makemigrations
+RUN python manage.py makemigrations livingstonesapp
+RUN python manage.py migrate
+
 # Collect static files
 RUN python manage.py collectstatic --noinput
 
