docker source from file root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     container_name: django
     image: django
     volumes:
+      - .:/app
       - ./media:/app/media/
       - ./db:/app/db/
 
