--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - .:/app
       - ./media:/app/media/
       - ./db:/app/db/
+      - ./static:/app/static/
 
     command: daphne -b 0.0.0.0 -p 8000 livingstones.asgi:application
     ports:
@@ -35,6 +36,8 @@ services:
       - .:/app
       - ./media:/app/media/
       - ./db:/app/db/
+      - ./static:/app/static/
+      -
     ports:
       - "80:80"
     depends_on:
