--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,19 +10,25 @@ services:
     container_name: django
     image: django
     volumes:
-      - .:/app
+      - shared-media:/app/media/
+      - db-sqlite:/app/db/
+      - db-migrations:/app/livingstonesapp/migrations/
 
-    command: daphne -b 0.0.0.0 -p 8000 livingstones.asgi:application
+    command: >
+      sh -c "python manage.py makemigrations &&
+             python manage.py makemigrations livingstonesapp &&
+             python manage.py migrate &&
+             daphne -b 0.0.0.0 -p 8000 livingstones.asgi:application"
     ports:
       - "8000:8000"
 
-#  react:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile-react
-#    container_name: react
-#    ports:
-#      - "3000:3000"
+  #  react:
+  #    build:
+  #      context: .
+  #      dockerfile: Dockerfile-react
+  #    container_name: react
+  #    ports:
+  #      - "3000:3000"
 
   nginx:
     build:
@@ -30,7 +36,9 @@ services:
       dockerfile: Dockerfile-nginx
     container_name: nginx
     volumes:
-      - .:/app
+      - shared-media:/app/media/
+      - db-sqlite:/app/db/
+      - db-migrations:/app/livingstonesapp/migrations/
 
     ports:
       - "80:80"
@@ -39,3 +47,5 @@ services:
 #      - react
 volumes:
   shared-media:
+  db-sqlite:
+  db-migrations:
