certbot and secure connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,10 +42,23 @@ services:
 
     ports:
       - "80:80"
+      - "443:443"
+
     depends_on:
       - django
-#      - react
+      - certbot
+
+  certbot:
+      image: certbot/certbot
+      volumes:
+        - certbot-etc:/etc/letsencrypt
+        - certbot-var:/var/lib/letsencrypt
+      entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $!; done;'"
+
 volumes:
   shared-media:
   db-sqlite:
   db-migrations:
+
+  certbot-etc:
+  certbot-var:
