--- a/nginx.conf
+++ b/nginx.conf
@@ -50,6 +50,12 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Serve the Let's Encrypt ACME challenge
+        location /.well-known/acme-challenge/ {
+            alias /var/lib/letsencrypt/.well-known/acme-challenge/;
+            allow all;
+        }
+
         # Proxy all other requests to Django
         location / {
             proxy_pass http://django:8000;
