--- a/nginx.conf
+++ b/nginx.conf
@@ -21,8 +21,8 @@ http {
         listen 443 ssl;
         server_name stonesliving.com;
 
-        ssl_certificate /etc/letsencrypt/archive/stonesliving.com/fullchain1.pem;
-        ssl_certificate_key /etc/letsencrypt/archive/stonesliving.com/privkey1.pem;
+        ssl_certificate /etc/letsencrypt/live/stonesliving.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/stonesliving.com/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
         ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
