--- a/nginx.conf
+++ b/nginx.conf
@@ -13,19 +13,7 @@ http {
 
     server {
         listen 80;
-        server_name stonesliving.com;
-        return 301 https://$host$request_uri; # Redirect all HTTP requests to HTTPS
-    }
-
-    server {
-        listen 443 ssl;
-        server_name stonesliving.com;
-
-        ssl_certificate /etc/letsencrypt/live/stonesliving.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/stonesliving.com/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
+        server_name stonesliving.com www.stonesliving.com;
 
         # Serve static files
         location /static/ {
@@ -60,12 +48,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Serve the Let's Encrypt ACME challenge
-        location /.well-known/acme-challenge/ {
-            alias /var/lib/letsencrypt/.well-known/acme-challenge/;
-            allow all;
         }
 
         # Proxy all other requests to Django
